--- a/style.css
+++ b/style.css
@@ -50,6 +50,20 @@ section {
 
 .text-dark {color: #1a1a1a;}
 
+.form-control {
+	font-size: 14px;
+	border: 1px solid #cacaca;
+	padding: 15px;
+	border-radius: 2px;
+	height: auto;	
+}
+
+.form-control:focus {
+	border: 1px solid #1a1a1a;
+	outline: none;
+	box-shadow: none;
+}
+
 .divider { border-bottom: 2px solid #f5f5f5; }
 
 .navbar {
@@ -120,6 +134,14 @@ section {
 
 .portfolio-details a h2, .portfolio-details a p {
 	color: #1c1c1c;
+}
+
+.padding8 {
+	padding: 10px 0 !important
+}
+
+.padding7 {
+	padding: 30px 0 !important
 }
 
 .member-container{
